--- a/index.html
+++ b/index.html
@@ -146,32 +146,47 @@
           </div>
        </section>
 
-       <!-- -------------- PROJECT BOX ---------------- -->
-       <section class="section" id="projects">
-          <div class="top-header">
-              <h1>Projects</h1>
-          </div>
-          <div class="project-container">
-            <div class="project-box">
-                <i class="uil uil-briefcase-alt"></i>
-                <h3>Sea Drone Project</h3>
-                <label>Autonomous marine drone for navigation and surveillance</label>
-                <button class="btn" onclick="window.location.href='https://github.com/Sfaxihoussem2/Sea-drone-'">View Project</button>
-            </div>
-            <div class="project-box">
-                <i class="uil uil-users-alt"></i>
-                <h3>Smart Glasses</h3>
-                <label>Smart glasses for blind persons with environment navigation</label>
-                <button class="btn" onclick="window.location.href='https://github.com/Sfaxihoussem2/smart-glasses-for-blind-person-'">View Project</button>
-            </div>
-            <div class="project-box">
-                <i class="uil uil-award"></i>
-                <h3>IoT Smart Lock</h3>
-                <label>IoT-based smart lock with environmental monitoring</label>
-                <button class="btn" onclick="window.location.href='https://github.com/Sfaxihoussem2/Pointing-use-RFID-card-with-Esp32'">View Project</button>
-            </div>
-          </div>
-       </section>
+<section class="section" id="projects">
+    <div class="top-header">
+        <h1>Projects</h1>
+    </div>
+    <div class="project-container">
+        <!-- Sea Drone Project -->
+        <div class="project-box">
+            <i class="uil uil-ship"></i> <!-- Sea Drone Icon -->
+            <h3>Sea Drone Project</h3>
+            <label>Autonomous marine drone for navigation and surveillance</label>
+            <button class="btn" onclick="window.location.href='https://github.com/Sfaxihoussem2/Sea-drone-'">View Project</button>
+        </div>
+
+        <!-- Smart Glasses Project -->
+        <div class="project-box">
+            <i class="uil uil-eye"></i> <!-- Eye Icon for Smart Glasses -->
+            <h3>Smart Glasses</h3>
+            <label>Smart glasses for blind persons with environment navigation</label>
+            <button class="btn" onclick="window.location.href='https://github.com/Sfaxihoussem2/smart-glasses-for-blind-person-'">View Project</button>
+        </div>
+
+        <!-- IoT Smart Lock Project -->
+        <div class="project-box">
+            <i class="uil uil-lock"></i> <!-- IoT Smart Lock Icon -->
+            <h3>IoT Smart Lock</h3>
+            <label>IoT-based smart lock with environmental monitoring</label>
+            <button class="btn" onclick="window.location.href='https://github.com/Sfaxihoussem2/Pointing-use-RFID-card-with-Esp32'">View Project</button>
+        </div>
+    </div>
+</section>
+
+
+<!-- JavaScript to open the link -->
+<script>
+    function openProjectLink(url) {
+        window.open(url, '_blank');  // Open in a new tab
+    }
+</script>
+
+
+
 
        <!-- -------------- CONTACT BOX ---------------- -->
        <section class="section" id="contact">
@@ -183,8 +198,8 @@
              <div class="col">
                 <div class="contact-info">
                     <h2>Find Me <i class="uil uil-corner-right-down"></i></h2>
-                    <p><i class="uil uil-envelope"></i> Email: houssem.sfaxi@example.com</p>
-                    <p><i class="uil uil-phone"></i> Tel: +216 12 345 678</p>
+                    <p><i class="uil uil-envelope"></i> Email: houssemsfaxi2.com</p>
+                    <p><i class="uil uil-phone"></i> Tel: +216 93 994 801</p>
                 </div>
              </div>
              <div class="col">
