--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!-- -------------- MAIN ---------------- -->
     <main class="wrapper">
        <!-- -------------- FEATURED BOX ---------------- -->
-       <section class="featured-box" id="home">
+        <section class="featured-box" id="home">
           <div class="featured-text">
             <div class="featured-text-card">
                 <span>Houssem Eddine Sfaxi</span>
@@ -67,12 +67,12 @@
             </div>
             <div class="featured-text-btn">
                 <button class="btn blue-btn">Hire Me</button>
-                <button class="btn" onclick="window.location.href='assets/files/CV.pdf'">Download CV <i class="uil uil-file-alt"></i></button>
+                <button class="btn">Download CV <i class="uil uil-file-alt"></i></button>
             </div>
             <div class="social_icons">
-                <div class="icon"><i class="uil uil-instagram"></i></div>
-                <div class="icon"><i class="uil uil-linkedin-alt"></i></div>
-                <div class="icon"><i class="uil uil-github-alt"></i></div>
+                <div class="icon"><a href="https://www.instagram.com"><i class="uil uil-instagram"></i></a></div>
+                <div class="icon"><a href="https://www.linkedin.com/in/houssem-sfaxi-3272a9280/"><i class="uil uil-linkedin-alt"></i></a></div>
+                <div class="icon"><a href="https://github.com/Sfaxihoussem2"><i class="uil uil-github-alt"></i></a></div>
             </div>
           </div>
           <div class="featured-image">
