--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <button class="btn">Download CV <i class="uil uil-file-alt"></i></button>
             </div>
             <div class="social_icons">
-                <div class="icon"><a href="https://www.instagram.com"><i class="uil uil-instagram"></i></a></div>
+                <div class="icon"><a href="https://www.instagram.com/houssem_sf/"><i class="uil uil-instagram"></i></a></div>
                 <div class="icon"><a href="https://www.linkedin.com/in/houssem-sfaxi-3272a9280/"><i class="uil uil-linkedin-alt"></i></a></div>
                 <div class="icon"><a href="https://github.com/Sfaxihoussem2"><i class="uil uil-github-alt"></i></a></div>
             </div>
